[tool.poetry]
name = "luozhouyang-github-io"
version = "0.1.0"
description = ""
authors = ["luozhouyang <zhouyang.luo@gmail.com>"]
readme = "README.md"
packages = [{include = "luozhouyang"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.29"
mkdocs-minify-plugin = "^0.8.0"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.cloud.aliyuncs.com/pypi/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
